--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -5,14 +5,15 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  padding: 10px 0;
-  margin-bottom: 0;
+  padding: 10px 20px 0 0;
+  margin-bottom: 10px;
   position: relative;
-  z-index: 999999;
+  max-height: 100vh;
 
   &__container-logo {
     width: 20%;
     margin: 0 50px;
+    z-index: 3;
 
     img {
       cursor: pointer;
@@ -38,9 +39,9 @@
     transition: all .5s ease-in-out;
 
     @media screen and (max-width: 770px) {
-      overflow: hidden;
-      height: 100vh;
-      transition: all 0.5s ease;
+      overflow-y: hidden;
+      height: 110vh;
+      transition: all 0.3s ease;
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
@@ -48,18 +49,18 @@
       pointer-events: none;
       position: absolute;
       top: 0;
-      right: -50%;
+      right: 0;
       width: 0;
       line-height: 50px;
       background-color: rgb(230, 228, 228);
+      z-index: 2;
 
       &.active {
         width: 50%;
         pointer-events: auto;
-        z-index: 100;
         font-size: 1.5em;
         margin-right: 0;
-        right: 0;
+        right: -5%;
 
         @media screen and (max-width: 480px) {
           width: 100vw !important;
@@ -78,15 +79,13 @@
 
     &--user {
       font-size: 1.5em;
-      width: 3%;
+      width: auto;
       min-width: 50px;
-
-      svg {
-        cursor: pointer;
-      }
+      cursor: pointer;
+      z-index: 2;
 
       @media screen and (max-width: 770px) {
-        width: 100%;
+        width: auto;
         margin: 20px 0;
         font-size: .8em;
       }
@@ -95,13 +94,14 @@
 
   .menu-close {
     width: 50px;
+    max-width: 50px;
     height: 50px;
     display: none;
     font-size: 2em;
     margin: 15px 30px;
     cursor: pointer;
     position: relative;
-    z-index: 200;
+    z-index: 3;
     color: white !important;
 
     @media screen and (max-width: 770px) {
@@ -112,12 +112,17 @@
   &__extra-icons {
     align-self: center;
     margin-right: 20px;
+    z-index: 2;
 
     &--cart {
       font-size: 1.5em;
       width: 3%;
       min-width: 50px;
-      cursor: pointer;
+      transition: all .2s ease-in-out;
+
+      &.hide {
+        opacity: 0;
+      }
 
       svg {
         cursor: pointer;
@@ -130,20 +135,20 @@
         min-width: 18px;
         min-height: 12px;
         position: absolute;
-        top: 10px;
-        right: 20px;
+        top: 14px;
+        right: 55px;
         color: white;
         font-weight: 100;
         padding: 2px;
         border: .1px solid #039e99;
 
         @media screen and (max-width: 770px) {
-          right: 115px;
+          right: 135px;
           top: 20px;
         }
 
         @media screen and (max-width: 420px) {
-          right: 55px;
+          right: 75px;
           top: 15px;
         }
       }
@@ -162,13 +167,13 @@
 
     &--hamburguer {
       width: 50px;
-      height: 50px;
+      max-width: 50px;
       display: none;
       font-size: 2em;
       margin: 15px 30px;
       cursor: pointer;
       position: relative;
-      z-index: 200;
+      z-index: 4;
 
       @media screen and (max-width: 770px) {
         display: block;
