--- a/src/assets/styles/scss/components/category/_product.scss
+++ b/src/assets/styles/scss/components/category/_product.scss
@@ -16,7 +16,7 @@
     &--visit {
       width: 40%;
       background-color: var.$bianchi-color;
-      padding: 1.5em 1.8em;
+      padding: 1.3em .4em;
       display: block;
       border-radius: 6px;
       margin: 16px auto;
@@ -29,6 +29,15 @@
 
       &:hover {
         background-position: left bottom;
+      }
+
+      @media screen and (max-width: 1830px) {
+        font-size: .7em;
+      }
+
+      @media screen and (max-width: 1450px) {
+        font-weight: 400;
+        width: 50%;
       }
     }
 
