--- a/src/assets/styles/scss/components/category/_product.scss
+++ b/src/assets/styles/scss/components/category/_product.scss
@@ -20,12 +20,14 @@
       display: block;
       border-radius: 6px;
       margin: 16px auto;
-      font-size: .9em;
+      font-size: 1em;
+      letter-spacing: 1px;
       cursor: pointer;
-      background: linear-gradient(to right, #00a59f 50%, var.$bianchi-color 50%);
-      transition: all .4s ease-out;
+      background: linear-gradient(to right, #00afa9 50%, var.$bianchi-color 50%);
+      transition: all .2s ease-out;
       background-size: 200% 100%;
       background-position: right bottom;
+      font-weight: 400;
 
       &:hover {
         background-position: left bottom;
