--- a/src/assets/styles/scss/components/category/_productBox.scss
+++ b/src/assets/styles/scss/components/category/_productBox.scss
@@ -68,6 +68,7 @@
     align-items: center;
 
     &--price {
+      font-size: 1.2em;
       letter-spacing: .2px;
       color: var.$bianchi-color;
 
