finish info in product view

--- a/src/assets/styles/scss/components/cart/_cart.scss
+++ b/src/assets/styles/scss/components/cart/_cart.scss
@@ -1,7 +1,7 @@
 @use '../../abstracts/variables' as var;
 @use './cartProductBox';
-@use './cartHandlerSection';
 @use './cartFooter';
+@use './cartHandlerModal';
 
 .cart {
   display: flex;
