--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -4,6 +4,7 @@
 @use './components/home/home';
 @use './components/category/category';
 @use './components/cart/cart';
+@use './components/view/mainView';
 @use './components/footer/footer';
 
 @use './components/page404';
