--- a/src/assets/styles/scss/components/view/_cartHandler.scss
+++ b/src/assets/styles/scss/components/view/_cartHandler.scss
@@ -1,19 +1,29 @@
 @use '../../abstracts/variables' as var;
 
 .cart-buttons {
-  width: 100%;
-  margin: 20px auto;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
   margin-right: 10px;
   display: flex;
   justify-content: center;
+  justify-content: space-around;
+  margin: 0 auto;
 
   &__cart {
     display: flex;
-    padding-left: 50px;
-    margin-right: 20px;
+    border-radius: 6px;
+    padding: 20px;
+    align-items: center;
+    background-color: white;
+    border: 1px solid rgba(197, 197, 197, 0.247);
+    font-size: 1.3em;
+    width: 50%;
+    justify-content: center;
 
     &--number {
-      margin: 12px 10px 0 10px;
+      margin: 0 10px 0 10px;
+      font-size: 1.2em;
 
       &.empty {
         opacity: .2;
@@ -22,16 +32,14 @@
 
 
     &--handle {
-      color: white;
-      background: linear-gradient(to right, #00a59f 50%, var.$bianchi-color 50%);
+      color: black;
+      background: white;
       transition: all .4s ease-out;
-      font-size: 1.2em;
-      width: 50%;
+      font-size: 1.3em;
+      width: auto;
       border-radius: 6px;
-      margin: 0 auto;
+      margin: 0 20px;
       cursor: pointer;
-      margin: 5px 10px;
-      padding: 7px 10px;
       background-size: 200% 100%;
       background-position: right bottom;
       opacity: 1;
@@ -81,19 +89,41 @@
         padding: 10px 15px;
       }
     }
+
+    &--remove {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+
+      &-trash {
+
+        font-size: 1.2em;
+        margin-right: 15px;
+
+        &:hover {
+          opacity: .9;
+        }
+      }
+
+      @media screen and (max-width: 770px) {
+        color: black;
+      }
+
+      @media screen and (max-width: 460px) {
+        margin-top: 20px;
+      }
+    }
   }
 
-
   &__like {
-    width: 7%;
-    opacity: .4;
-    transition: all .4s ease-in-out;
-    cursor: pointer;
-    float: right;
-    font-size: 2.5em;
 
-    &:hover {
-      opacity: .9;
-    }
+    display: none;
+  }
+
+  @media screen and (max-width: 460px) {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
   }
 }
