--- a/src/assets/styles/scss/components/view/_images.scss
+++ b/src/assets/styles/scss/components/view/_images.scss
@@ -4,17 +4,30 @@
   min-width: 50%;
 
   &__main {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
 
     &--img {}
   }
 
   &__secondary {
-    
-    &--images {
 
+    &--images {
+      width: 100%;
+      display: flex;
+      justify-content: start;
+      align-items: center;
 
       img {
-        
+        max-width: 200px;
+        margin-right: 5px;
+        cursor: pointer;
+        opacity: .4;
+
+        &.active {
+          opacity: 1;
+        }
       }
     }
   }
