--- a/src/assets/styles/scss/components/view/_mainView.scss
+++ b/src/assets/styles/scss/components/view/_mainView.scss
@@ -4,9 +4,9 @@
 @use './info';
 
 .view {
-  width: 50%;
+  width: 60%;
   padding: var.$section-padding;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   margin: 0 auto;
 }
