--- a/src/assets/styles/scss/components/cart/_cart.scss
+++ b/src/assets/styles/scss/components/cart/_cart.scss
@@ -143,6 +143,36 @@
         margin: 10px 30px;
         width: auto;
         border-radius: 7px;
+        position: relative;
+
+
+        &-close {
+          cursor: pointer;
+          font-size: 1.5em;
+          position:absolute;
+          right: 10px;
+          top: 10px;
+          color: rgba(105, 102, 102, 0.637);
+          transition: all .3s ease-in-out;
+          z-index: 5;
+
+          &:hover {
+            color: red;
+            transform: rotate(180deg);
+          }
+
+          @media screen and (max-width: 770px) {
+            color: white;
+
+            &:hover {
+              transform: none;
+            }
+          }
+
+          @media screen and (max-width: 500px) {
+            font-size: 1.5em;
+          }
+        }
 
         &-calc {
           width: 100%;
