add price in menu and make some styles

--- a/src/assets/styles/scss/components/header/_dropdown.scss
+++ b/src/assets/styles/scss/components/header/_dropdown.scss
@@ -50,6 +50,7 @@
   margin: 0;
   position: absolute;
   box-shadow: 0 0 2px 0 gray;
+  background-color: #F2F2F2;
   border-radius: 5px;
   padding: 0;
   z-index: 3;
